Fix scrollbar showing in the Required Email screen if email is a primary.
Set the max-height to 130px instead of 110px.

issue #947

--- a/resources/static/dialog/css/popup.css
+++ b/resources/static/dialog/css/popup.css
@@ -356,7 +356,7 @@ footer {
     margin: 1em 0 .5em;
     padding: 0 1em;
     line-height: 18px;
-    max-height: 110px;
+    max-height: 130px;
     overflow-y: auto;
 }
 
